--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Edgar Joseph Pelinggon | WDD130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <a href="#">Home</a>
+        <a href="wwr">Rafting Website</a>
+    </header>
+    <main>
+        <h1> Edgar Joseph Pelinggon | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Joseph Pelinggon" width="200">
+        <p>I am Edgar Joseph Pelinggon! 28 Years old. My mission from 2016 to 2018 was one of the most meaningful
+            experiences of my life. I felt inspired every day as I
+            served and taught the Lord’s children, witnessing how His gospel brings light and change to people’s hearts.
+        </p>
+    </main>
+    <footer>
+        <p>©2025 👌 Edgar Joseph Pelinggon 👌 Philippines</p>
+    </footer>
 </body>
+
 </html>
