--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="#">Home</a>
-        <a href="wwr">Rafting Website</a>
+        <a href="wwr/">Rafting Website</a>
     </header>
     <main>
         <h1> Edgar Joseph Pelinggon | WDD 130</h1>
