--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edgar Joseph Pelinggon | WDD130</title>
+    <title>WDD 130 | Edgar Joseph Pelinggon</title>
 </head>
 
 <body>
     <header>
-        <a href="#">Home</a>
-        <a href="wwr/">Rafting Website</a>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
     </header>
     <main>
         <h1> Edgar Joseph Pelinggon | WDD 130</h1>
