--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Edgar Joseph Pelinggon</title>
+    <title>Edgar Joseph Pelinggon | WDD130</title>
+    <meta name="description" content="Edgar Joseph Pelinggon's WDD 130 Project HOME PAGE">\
+    <meta name="author" content="Edgar Joseph Pelinggon">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -12,6 +15,7 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="wwrs/">Rafting Site Plan</a>
         </nav>
     </header>
     <main>
@@ -22,6 +26,16 @@
             served and taught the Lord’s children, witnessing how His gospel brings light and change to people’s hearts.
         </p>
     </main>
+    <aside>
+        <h2>Philippines</h2>
+        <img src="images/Banaue-Rice-Terraces.png" alt="Banaue Rice Terraces">
+        <p>The Banaue Rice Terraces teach us the value of hard work, unity, and respect for nature.
+            Built by the Ifugao people over 2,000 years ago without modern tools, these terraces show how dedication and
+            cooperation
+            can create something lasting and beautiful. They remind us that when we work together in harmony with the
+            land, we can
+            build a sustainable future for generations to come.</p>
+    </aside>
     <footer>
         <p>©2025 👌 Edgar Joseph Pelinggon 👌 Philippines</p>
     </footer>
