--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edgar Joseph Pelinggon | WDD130</title>
-    <meta name="description" content="Edgar Joseph Pelinggon's WDD 130 Project HOME PAGE">\
+    <meta name="description" content="Edgar Joseph Pelinggon's WDD 130 Project HOME PAGE">
     <meta name="author" content="Edgar Joseph Pelinggon">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
