--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edgar Joseph Pelinggon | WDD130</title>
     <meta name="description" content="Edgar Joseph Pelinggon's WDD 130 Project HOME PAGE">
     <meta name="author" content="Edgar Joseph Pelinggon">
     <link rel="stylesheet" href="styles/styles.css">
+    <title>Edgar Joseph Pelinggon | WDD130</title>
 </head>
 
 <body>
@@ -15,7 +15,6 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
-            <a href="wwrs/">Rafting Site Plan</a>
         </nav>
     </header>
     <main>
@@ -28,7 +27,7 @@
     </main>
     <aside>
         <h2>Philippines</h2>
-        <img src="images/Banaue-Rice-Terraces.png" alt="Banaue Rice Terraces">
+        <img src="images/banaue-rice-terraces.jpg" alt="banaue rice terraces">
         <p>The Banaue Rice Terraces teach us the value of hard work, unity, and respect for nature.
             Built by the Ifugao people over 2,000 years ago without modern tools, these terraces show how dedication and
             cooperation
