--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Edgar Joseph Pelinggon's WDD 130 Project HOME PAGE">
     <meta name="author" content="Edgar Joseph Pelinggon">
-    <title>Edgar Joseph Pelinggon | WDD130</title>
+    <title>WDD130 | Edgar Joseph Pelinggon</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
