--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn more about our White Water Rafting adventures, our history, and our team.">
+    <meta name="author" content="Your Full Name">
+    <title>About Us | White Water Rafting</title>
+    <link rel="stylesheet" href="styles/rafting.css">
+</head>
+
+<body>
+    <header>
+        <img src="images/logo.jpeg" alt="WWR Logo" class="logo">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div class="hero">
+            <img src="images/hero.jpg" alt="Rafting Adventure">
+            <h1>White Water Rafting Company</h1>
+            <article>
+                <img src="images/client.jpg" alt="Happy Client">
+                <p>Our mission is to provide unforgettable white water rafting experiences while respecting nature and
+                    ensuring safety.</p>
+            </article>
+        </div>
+
+        <section>
+            <h2>History</h2>
+            <p>Founded in 2005, our company has guided thousands of adventurers through thrilling rapids with a focus on
+                fun and safety.</p>
+        </section>
+
+        <section>
+            <h2>Adventure Awaits You!</h2>
+            <p><!-- Add content/images in future assignments --></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 White Water Rafting | Edgar Joseph Pelinggon</p>
+        <nav class="socialmedia">
+            <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook Icon"></a>
+            <a href="https://linkedin.com"><img src="images/linkedin.png" alt="LinkedIn Icon"></a>
+            <a href="https://instagram.com"><img src="images/instagram.jpg" alt="Instagram Icon"></a>
+        </nav>
+    </footer>
+</body>
+
+</html>
