--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn more about our White Water Rafting adventures, our history, and our team.">
-    <meta name="author" content="Your Full Name">
+    <meta name="author" content="Edgar Joseph Pelinggon">
     <title>About Us | White Water Rafting</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="about.html" class="active">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
@@ -24,36 +24,82 @@
     </header>
 
     <main>
+
         <div class="hero">
             <img src="images/hero.jpg" alt="Rafting Adventure">
             <h1>White Water Rafting Company</h1>
+
             <article>
                 <img src="images/client.jpg" alt="Happy Client">
-                <p>Our mission is to provide unforgettable white water rafting experiences while respecting nature and
-                    ensuring safety.</p>
+                <p>Our mission is to provide unforgettable white water rafting experiences while respecting nature
+                    and ensuring safety for everyone who joins our adventures.</p>
             </article>
         </div>
 
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>Founded in 2005, our company has guided thousands of adventurers through thrilling rapids with a focus on
-                fun and safety.</p>
+
+            <div class="history-layout">
+                <p>Our story began in 2005 when a small group of outdoor enthusiasts set out to create a rafting
+                    company built on passion, safety, and unforgettable experiences. What started with a single raft
+                    has grown into one of the most trusted adventure companies in the region.</p>
+
+                <img src="images/history.jpg" alt="Rafting History">
+
+                <p>Over the years, we have guided thousands of adventurers through some of the most thrilling and
+                    scenic river routes. Our commitment remains the same: to inspire a love for the outdoors while
+                    maintaining the highest safety standards.</p>
+            </div>
         </section>
 
-        <section>
+        <section class="adventures">
             <h2>Adventure Awaits You!</h2>
-            <p><!-- Add content/images in future assignments --></p>
+
+            <div class="adventure-gallery">
+                <figure>
+                    <img src="images/adventure1.jpg" alt="adventure1">
+                    <figcaption>Whitewater Rafting</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure2.jpg" alt="adventure2">
+                    <figcaption>Flatwater Rafting</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure3.jpg" alt="adventure3">
+                    <figcaption>River Tubing / Lazy River</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure4.jpg" alt="adventure4">
+                    <figcaption>Family Rafting Trips</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/adventure5.jpg" alt="adventure5">
+                    <figcaption>Adventure / Extreme Rafting</figcaption>
+                </figure>
+            </div>
         </section>
+
     </main>
 
     <footer>
         <p>&copy; 2025 White Water Rafting | Edgar Joseph Pelinggon</p>
         <nav class="socialmedia">
-            <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook Icon"></a>
-            <a href="https://linkedin.com"><img src="images/linkedin.png" alt="LinkedIn Icon"></a>
-            <a href="https://instagram.com"><img src="images/instagram.jpg" alt="Instagram Icon"></a>
+            <a href="https://facebook.com">
+                <img src="images/facebook.png" alt="Facebook Icon">
+            </a>
+            <a href="https://linkedin.com">
+                <img src="images/linkedin.png" alt="LinkedIn Icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="images/instagram.jpg" alt="Instagram Icon">
+            </a>
         </nav>
     </footer>
+
 </body>
 
 </html>
