Update adventure images and captions

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -57,28 +57,28 @@
 
             <div class="adventure-gallery">
                 <figure>
-                    <img src="images/adventure1.jpg" alt="adventure1">
-                    <figcaption>Whitewater Rafting</figcaption>
+                    <img src="images/adventure1.jpg" alt="Los Dientes del Diablo">
+                    <figcaption>Los Dientes del Diablo</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/adventure2.jpg" alt="adventure2">
-                    <figcaption>Flatwater Rafting</figcaption>
+                    <img src="images/adventure2.jpg" alt="Big Mallard Rapids">
+                    <figcaption>Big Mallard Rapids</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/adventure3.jpg" alt="adventure3">
-                    <figcaption>River Tubing / Lazy River</figcaption>
+                    <img src="images/adventure3.jpg" alt="aHalf Day Adventure">
+                    <figcaption>Half Day Adventure</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/adventure4.jpg" alt="adventure4">
-                    <figcaption>Family Rafting Trips</figcaption>
+                    <img src="images/adventure4.jpg" alt="Souse Hole">
+                    <figcaption>Souse Hole</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/adventure5.jpg" alt="adventure5">
-                    <figcaption>Adventure / Extreme Rafting</figcaption>
+                    <img src="images/adventure5.jpg" alt="Pine Creek Rapids">
+                    <figcaption>Pine Creek Rapids</figcaption>
                 </figure>
             </div>
         </section>
