--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -66,6 +66,10 @@
                         <label for="message">Message:</label>
                         <textarea id="message" name="message" placeholder="Your Message" required></textarea>
 
+                        
+                        <input type="checkbox" id="subscribe" name="subscribe" required>
+                        <label for="subscribe"> I agree to receive updates and newsletters</label>
+
                         <button type="submit">Send Message</button>
                     </form>
                 </div>
