--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -80,15 +80,15 @@
             <h2>We Are Here to Serve You</h2>
             <div class="employee-profiles">
                 <div class="employee-profile">
-                    <img src="images/employee1.jpg" alt="John Smith">
+                    <img src="images/JohnSmith.jpg" alt="John Smith">
                     <p>John Smith - Tour Manager</p>
                 </div>
                 <div class="employee-profile">
-                    <img src="images/employee2.jpg" alt="Jane Doe">
-                    <p>Jane Doe - Safety Coordinator</p>
+                    <img src="images/JaneDon.jpg" alt="Jane Don">
+                    <p>Jane Don - Safety Coordinator</p>
                 </div>
                 <div class="employee-profile">
-                    <img src="images/employee3.jpg" alt="Mike Johnson">
+                    <img src="images/MikeJohnson.jpg" alt="Mike Johnson">
                     <p>Mike Johnson - Guest Services</p>
                 </div>
             </div>
