Add author meta tag and update employee images
Added author meta tag and updated employee images.

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - White Water Rafting Company</title>
     <meta name="description" content="Contact White Water Rafting Company for inquiries, reservations, or suggestions.">
+    <meta name="author" content="Edgar Joseph Pelinggon">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
@@ -80,15 +81,15 @@
             <h2>We Are Here to Serve You</h2>
             <div class="employee-profiles">
                 <div class="employee-profile">
-                    <img src="images/JohnSmith.jpg" alt="John Smith">
+                    <img src="images/employee1.jpg" alt="John Smith">
                     <p>John Smith - Tour Manager</p>
                 </div>
                 <div class="employee-profile">
-                    <img src="images/JaneDon.jpg" alt="Jane Don">
+                    <img src="images/employee2.jpg" alt="Jane Don">
                     <p>Jane Don - Safety Coordinator</p>
                 </div>
                 <div class="employee-profile">
-                    <img src="images/MikeJohnson.jpg" alt="Mike Johnson">
+                    <img src="images/employee3.jpg" alt="Mike Johnson">
                     <p>Mike Johnson - Guest Services</p>
                 </div>
             </div>
