Fix stylesheet link path in index.html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,7 +8,7 @@
         content="Experience thrilling white water rafting adventures on scenic rivers. Book your trip today!">
     <meta name="author" content="Edgar Joseph Pelinggon">
     <title>Home | White Water Rafting</title>
-    <link rel="stylesheet" href="wwr/styles/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
