Fix HTML encoding issues in trips.html

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -8,7 +8,7 @@
         content="Explore all the white water rafting trips we offer, including pricing, duration, and difficulty levels.">
     <meta name="author" content="Edgar Joseph Pelinggon">
     <title>Trips | White Water Rafting</title>
-    <link rel="stylesheet" href="wwr/styles/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
@@ -134,5 +134,6 @@
     </footer>
 
 </body>
+
 
 </html>
